--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -2,62 +2,62 @@
 \centering
 \label{tab:t1}
 \scriptsize
-\begin{tabular}{|c c|cc|cc|cc|}
+\begin{tabular}{c ccccccc}
 \midrule
-\multicolumn{2}{|c|}{\multirow{3}{*}{\textbf{Cases}}} & \multicolumn{6}{c|}{\textbf{Efectividad}} \\
+\multicolumn{2}{c}{\multirow{3}{*}{\textbf{Cases}}} & \multicolumn{6}{c}{\textbf{Efectividad}} \\
 \cline{3-8}
-\multicolumn{2}{|c|}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c|}{\textbf{SubSet}} \\
-\multicolumn{2}{|c|}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} \\
+\multicolumn{2}{c}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c}{\textbf{SubSet}} \\
+\multicolumn{2}{c}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{NCL}} & 3  &   \cellcolor{gray!25} \emph{3.8} & 3 &  3 &3 &  3 \\
-\multicolumn{2}{|c|}{\tiny \#API: 34} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{NCL}} & 3  &   \cellcolor{gray!25} \emph{3.8} & 3 &  3 &3 &  3 \\
+\multicolumn{2}{c}{\tiny \#API: 34} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &   & & \\
 
 \midrule
-\multicolumn{2}{|c|}{\textbf{UFInd}}& 3 & 3  & 3  & 3  &3   & 3     \\
-\multicolumn{2}{|c|}{\tiny \#API: 9} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{UFInd}}& 3 & 3  & 3  & 3  &3   & 3     \\
+\multicolumn{2}{c}{\tiny \#API: 9} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{FHeap}}& 3 & 3  &  3 &  3 &  3 &  0   \\
-\multicolumn{2}{|c|}{\tiny \#API: 7} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{FHeap}}& 3 & 3  &  3 &  3 &  3 &  0   \\
+\multicolumn{2}{c}{\tiny \#API: 7} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{BTree}} & 2 & 2  &  2 &  2 &  2 &  2  \\
-\multicolumn{2}{|c|}{\tiny \#API: 8} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{BTree}} & 2 & 2  &  2 &  2 &  2 &  2  \\
+\multicolumn{2}{c}{\tiny \#API: 8} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 2} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{BHeap}}& 3 & 3 &  3 &  3 &  3 &  3   \\
-\multicolumn{2}{|c|}{\tiny \#API: 10} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{BHeap}}& 3 & 3 &  3 &  3 &  3 &  3   \\
+\multicolumn{2}{c}{\tiny \#API: 10} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{Lits}} &  6 & 5 & 6 &  5  & 6  &5   \\
-\multicolumn{2}{|c|}{\tiny \#API: 26} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 6} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{Lits}} &  6 & 5 & 6 &  5  & 6  &5   \\
+\multicolumn{2}{c}{\tiny \#API: 26} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 6} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{Sched.}} &  3 & 3   & 3  &  3&  3 & 3 \\
+\multicolumn{2}{c}{\textbf{Sched.}} &  3 & 3   & 3  &  3&  3 & 3 \\
 
-\multicolumn{2}{|c|}{\tiny \#API: 10} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
-\midrule\multicolumn{2}{|c|}{\textbf{LinkedList}} & 2 &  2.80 &  2 &  3 &2  &  2.80  \\
-\multicolumn{2}{|c|}{\tiny \#API: 67} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#API: 10} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &   & & \\
+\midrule\multicolumn{2}{c}{\textbf{LinkedList}} & 2 &  2.80 &  2 &  3 &2  &  2.80  \\
+\multicolumn{2}{c}{\tiny \#API: 67} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 2} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{TreeMap}} &  3 & \cellcolor{gray!25}\emph{5.60}  &  3 &  \cellcolor{gray!25} \emph{4}  &3 & \cellcolor{gray!25}\emph{5}   \\
-\multicolumn{2}{|c|}{\tiny \#API: 61} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{TreeMap}} &  3 & \cellcolor{gray!25}\emph{5.60}  &  3 &  \cellcolor{gray!25} \emph{4}  &3 & \cellcolor{gray!25}\emph{5}   \\
+\multicolumn{2}{c}{\tiny \#API: 61} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{TreeSet}} &  0&\cellcolor{gray!25} \emph{3.20}  &  3 &   \cellcolor{gray!25}\emph{4}  & 3 & \cellcolor{gray!25}\emph{4}   \\
-\multicolumn{2}{|c|}{\tiny \#API: 34} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{TreeSet}} &  0&\cellcolor{gray!25} \emph{3.20}  &  3 &   \cellcolor{gray!25}\emph{4}  & 3 & \cellcolor{gray!25}\emph{4}   \\
+\multicolumn{2}{c}{\tiny \#API: 34} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{HashSet}} &  2 &3  &  2 &  3& 2  &  3 \\
-\multicolumn{2}{|c|}{\tiny \#API: 31} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{HashSet}} &  2 &3  &  2 &  3& 2  &  3 \\
+\multicolumn{2}{c}{\tiny \#API: 31} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 2} &  &   & &   & & \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{HashMap}} & 2.60  & 2  &2   &2   &  2 & 2   \\
-\multicolumn{2}{|c|}{\tiny \#API: 45} &  &   & &   & & \\
-\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
+\multicolumn{2}{c}{\textbf{HashMap}} & 2.60  & 2  &2   &2   &  2 & 2   \\
+\multicolumn{2}{c}{\tiny \#API: 45} &  &   & &   & & \\
+\multicolumn{2}{c}{\tiny \#Builders: 2} &  &   & &   & & \\
 \hline
 \end{tabular}
 
